unpackaged/main/default/objects/Lead/fields/Activity_Score__c.field-meta.xml
<CustomField>
    <fullName>Activity_Score__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Activity Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>