unpackaged/main/default/objects/Lead/fields/Additional_feedback_for_Tier_2__c.field-meta.xml
<CustomField>
    <fullName>Additional_feedback_for_Tier_2__c</fullName>
    <label>Additional feedback for Tier 2</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>