unpackaged/main/default/objects/Lead/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <defaultValue>false</defaultValue>
    <label>z_Application</label>
    <type>Checkbox</type>
</CustomField>