unpackaged/main/default/objects/Lead/fields/Application_Pending__c.field-meta.xml
<CustomField>
    <fullName>Application_Pending__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the student has the intention of applying in the future</description>
    <inlineHelpText>Indicates that the student has the intention of applying in the future</inlineHelpText>
    <label>Application Pending</label>
    <type>Checkbox</type>
</CustomField>