unpackaged/main/default/objects/Lead/fields/Approval_Process_Active__c.field-meta.xml
<CustomField>
    <fullName>Approval_Process_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when the traditional enrollment lead approval process for criminal convictions is underway</description>
    <label>Approval Process Active</label>
    <type>Checkbox</type>
</CustomField>