unpackaged/main/default/objects/Lead/fields/Approval_Process_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Process_Completion_Date__c</fullName>
    <label>Approval Process Completion Date</label>
    <type>Date</type>
</CustomField>