unpackaged/main/default/objects/Lead/fields/Associated_Application__c.field-meta.xml
<CustomField>
    <fullName>Associated_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>