unpackaged/main/default/objects/Lead/fields/Associated_Application_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Associated_Application_Date_Time__c</fullName>
    <formula>Associated_Application__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Associated Application Date/Time</label>
    <type>DateTime</type>
</CustomField>