unpackaged/main/default/objects/Lead/fields/Associated_Application_Referral_Source__c.field-meta.xml
<CustomField>
    <fullName>Associated_Application_Referral_Source__c</fullName>
    <description>Field created for use in Five9 lead campaigns</description>
    <formula>text(Associated_Application__r.Referral_Source__c)</formula>
    <label>Associated Application Referral Source</label>
    <type>Text</type>
</CustomField>