unpackaged/main/default/objects/Lead/fields/Associated_Application_University_Name__c.field-meta.xml
<CustomField>
    <fullName>Associated_Application_University_Name__c</fullName>
    <formula>Associated_Application__r.University__r.Name</formula>
    <label>Associated Application University Name</label>
    <type>Text</type>
</CustomField>