unpackaged/main/default/objects/Lead/fields/Attempted_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>Attempted_Contact_Date__c</fullName>
    <inlineHelpText>Attempted Contact Date</inlineHelpText>
    <label>Attempted Contact Date</label>
    <type>Date</type>
</CustomField>