unpackaged/main/default/objects/Lead/fields/Behavior_Score__c.field-meta.xml
<CustomField>
    <fullName>Behavior_Score__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Created for Admissions lead scoring. Scores based on student activity and age of the lead</description>
    <label>Behavior Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>