unpackaged/main/default/objects/Lead/fields/Channel_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Channel_Subtype__c</fullName>
    <description>This field was requested by the Partner Relations and College Counseling teams. It indicates the type of pathway a student can follow for guaranteed admission to the channel partner school. The pathway may be guaranteed no matter what (Spring Start), or guaranteed only after successful completion of a Verto semester (Scholars).</description>
    <formula>TEXT(Associated_Application__r.Channel_Subtype__c)</formula>
    <inlineHelpText>Indicates the type of pathway a student can follow for guaranteed admission to the channel partner school. The pathway may be guaranteed no matter what (Spring Start), or guaranteed only after successful completion of a Verto semester (Scholars).</inlineHelpText>
    <label>Channel Subtype</label>
    <type>Text</type>
</CustomField>