unpackaged/main/default/objects/Lead/fields/Channel_Type__c.field-meta.xml
<CustomField>
    <fullName>Channel_Type__c</fullName>
    <description>This field was requested by the Partner Relations and College Counseling teams. It indicates the type of pathway a student can follow to attend the channel partner school. &quot;Bridge&quot; indicates that the student must reapply to the partner after they successfully complete a Verto semester. &quot;Guaranteed&quot; indicates that the student does not need to reapply to the partner school in order to attend.</description>
    <formula>Associated_Application__r.Channel_Type__c</formula>
    <inlineHelpText>&quot;Bridge&quot; indicates that the student must reapply to the partner after they successfully complete a Verto semester. &quot;Guaranteed&quot; indicates that the student does not need to reapply to the partner school in order to attend.</inlineHelpText>
    <label>Channel Type</label>
    <type>Text</type>
</CustomField>