unpackaged/main/default/objects/Lead/fields/College_Planning_Process_Notes__c.field-meta.xml
<CustomField>
    <fullName>College_Planning_Process_Notes__c</fullName>
    <label>College Planning Process Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>