unpackaged/main/default/objects/Lead/fields/Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>Contact_Date__c</fullName>
    <description>Contact Date</description>
    <label>Contact Date</label>
    <type>Date</type>
</CustomField>