unpackaged/main/default/objects/Lead/fields/Converted_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Converted_Date_Time__c</fullName>
    <description>When the lead was converted</description>
    <label>Converted Date/Time</label>
    <type>DateTime</type>
</CustomField>