unpackaged/main/default/objects/Lead/fields/Delete_from_f9list_id__c.field-meta.xml
<CustomField>
    <fullName>Delete_from_f9list_id__c</fullName>
    <label>Delete from Five9 List</label>
    <length>50</length>
    <type>Text</type>
</CustomField>