unpackaged/main/default/objects/Lead/fields/Demographic_Score__c.field-meta.xml
<CustomField>
    <fullName>Demographic_Score__c</fullName>
    <formula>IF( (GPA_Score__c + Source_Score__c + YOG_Score__c )&gt;20, 20, (GPA_Score__c + Source_Score__c + YOG_Score__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Demographic Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>