unpackaged/main/default/objects/Lead/fields/Email_Hard_Bounced__c.field-meta.xml
<CustomField>
    <fullName>Email_Hard_Bounced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When an email hard bounces in marketing cloud, this checkbox is checked.</description>
    <label>Email Hard Bounced</label>
    <type>Checkbox</type>
</CustomField>