unpackaged/main/default/objects/Lead/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>The applicant&#39;s unique ID in the channel enrollment university&#39;s database</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>