unpackaged/main/default/objects/Lead/fields/f9callasap__c.field-meta.xml
<CustomField>
    <fullName>f9callasap__c</fullName>
    <defaultValue>false</defaultValue>
    <label>F9 Call ASAP</label>
    <type>Checkbox</type>
</CustomField>