unpackaged/main/default/objects/Lead/fields/First_Call_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Call_Date_Time__c</fullName>
    <description>The date and time of the first logged call.</description>
    <inlineHelpText>The date and time of the first logged call.</inlineHelpText>
    <label>First Call Date/Time</label>
    <type>DateTime</type>
</CustomField>