unpackaged/main/default/objects/Lead/fields/FirstResponseDatetime__c.field-meta.xml
<CustomField>
    <fullName>FirstResponseDatetime__c</fullName>
    <label>FirstResponseDatetime</label>
    <type>DateTime</type>
</CustomField>