unpackaged/main/default/objects/Lead/fields/Gender_Info__c.field-meta.xml
<CustomField>
    <fullName>Gender_Info__c</fullName>
    <label>Gender Info</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>