unpackaged/main/default/objects/Lead/fields/GPA_Score__c.field-meta.xml
<CustomField>
    <fullName>GPA_Score__c</fullName>
    <defaultValue>0</defaultValue>
    <label>GPA Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>