unpackaged/main/default/objects/Lead/fields/High_School__c.field-meta.xml
<CustomField>
    <fullName>High_School__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>High School</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (High School)</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <type>Lookup</type>
</CustomField>