unpackaged/main/default/objects/Lead/fields/High_School_GPA__c.field-meta.xml
<CustomField>
    <fullName>High_School_GPA__c</fullName>
    <label>High School GPA</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>