unpackaged/main/default/objects/Lead/fields/HS_Experience_Notes__c.field-meta.xml
<CustomField>
    <fullName>HS_Experience_Notes__c</fullName>
    <label>HS Experience Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>