unpackaged/main/default/objects/Lead/fields/Last_Marketing_Nurture_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Marketing_Nurture_Date_Time__c</fullName>
    <description>When the lead entered the Marketing Nurture status most recently</description>
    <label>Last Marketing Nurture Date/Time</label>
    <type>DateTime</type>
</CustomField>