unpackaged/main/default/objects/Lead/fields/Last_Qualifying_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Qualifying_Activity_Date__c</fullName>
    <description>Created for Admissions lead scoring</description>
    <label>Last Qualifying Activity Date</label>
    <type>Date</type>
</CustomField>