unpackaged/main/default/objects/Lead/fields/Last_RFI_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_RFI_Date_Time__c</fullName>
    <label>Last RFI Date/Time</label>
    <type>Date</type>
</CustomField>