unpackaged/main/default/objects/Lead/fields/Last_Started_Application_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Started_Application_Date_Time__c</fullName>
    <description>When the lead started an application most recently</description>
    <inlineHelpText>When the lead started an application most recently</inlineHelpText>
    <label>Last Started Application Date/Time</label>
    <type>DateTime</type>
</CustomField>