unpackaged/main/default/objects/Lead/fields/Lead_Owner_Calendly_Link__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Calendly_Link__c</fullName>
    <description>The lead owner&#39;s Calendly booking page link</description>
    <formula>Owner:User.Calendly_Link__c</formula>
    <label>Lead Owner Calendly Link</label>
    <type>Text</type>
</CustomField>