unpackaged/main/default/objects/Lead/fields/Lead_Owner_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Is_Active__c</fullName>
    <description>Indicates whether or not the lead owner is active</description>
    <formula>if(Owner:User.IsActive=true, true, false)</formula>
    <label>Lead Owner Is Active</label>
    <type>Checkbox</type>
</CustomField>