unpackaged/main/default/objects/Lead/fields/Marketing_Nurture_Reason__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Nurture_Reason__c</fullName>
    <label>Marketing Nurture Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cost</fullName>
            </value>
            <value>
                <fullName>Geographic Misalignment</fullName>
            </value>
            <value>
                <fullName>Bad Year of HS Graduation</fullName>
            </value>
            <value>
                <fullName>Needs Education on Product</fullName>
            </value>
            <value>
                <fullName>Parents Unsupportive</fullName>
            </value>
            <value>
                <fullName>Product Misalignment</fullName>
            </value>
            <value>
                <fullName>Too Young</fullName>
            </value>
            <value>
                <fullName>Undocumented</fullName>
            </value>
            <value>
                <fullName>Non-Responsive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>