unpackaged/main/default/objects/Lead/fields/Most_Recent_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Activity_Date__c</fullName>
    <description>The date and time of the last logged call, text or completed interview</description>
    <inlineHelpText>The date and time of the last logged call, text or completed interview</inlineHelpText>
    <label>Most Recent Activity Date</label>
    <type>DateTime</type>
</CustomField>