unpackaged/main/default/objects/Lead/fields/Most_Recent_Applied_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Applied_Date_Time__c</fullName>
    <description>When the lead entered the Applied status most recently</description>
    <label>Most Recent Applied Date/Time</label>
    <type>DateTime</type>
</CustomField>