unpackaged/main/default/objects/Lead/fields/Most_Recent_Engaged_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Engaged_Date_Time__c</fullName>
    <description>When the lead entered the Engaged status most recently</description>
    <label>Most Recent Engaged Date/Time</label>
    <type>DateTime</type>
</CustomField>