unpackaged/main/default/objects/Lead/fields/Most_Recent_In_Review_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_In_Review_Date_Time__c</fullName>
    <description>When the lead entered the In Review status most recently</description>
    <label>Most Recent In Review Date/Time</label>
    <type>DateTime</type>
</CustomField>