unpackaged/main/default/objects/Lead/fields/Most_Recent_Open_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Open_Date_Time__c</fullName>
    <description>When the lead entered the Open status most recently</description>
    <label>Most Recent Open Date/Time</label>
    <type>DateTime</type>
</CustomField>