unpackaged/main/default/objects/Lead/fields/Most_Recent_Source__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Source__c</fullName>
    <label>Most Recent Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>