unpackaged/main/default/objects/Lead/fields/Most_Recent_Text_Message_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Text_Message_Date_Time__c</fullName>
    <description>The date and time of the last text message</description>
    <inlineHelpText>The date and time of the last text message</inlineHelpText>
    <label>Most Recent Text Message Date/Time</label>
    <type>DateTime</type>
</CustomField>