unpackaged/main/default/objects/Lead/fields/Most_Recent_Unqualified_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Unqualified_Date_Time__c</fullName>
    <description>When the lead entered the Unqualified status most recently</description>
    <label>Most Recent Unqualified Date/Time</label>
    <type>DateTime</type>
</CustomField>