unpackaged/main/default/objects/Lead/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>General lead notes field</description>
    <label>Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>