unpackaged/main/default/objects/Lead/fields/Number_of_Text_Messages__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Text_Messages__c</fullName>
    <label>Number of Text Messages</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>