unpackaged/main/default/objects/Lead/fields/Opted_Into_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Opted_Into_Marketing__c</fullName>
    <description>The person has agreed to be contacted by Verto Education about our products and services, as well as other content that may be of interest to them.</description>
    <label>Opted Into Marketing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>