unpackaged/main/default/objects/Lead/fields/Original_Source__c.field-meta.xml
<CustomField>
    <fullName>Original_Source__c</fullName>
    <label>Original Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>