unpackaged/main/default/objects/Lead/fields/Parent_Email__c.field-meta.xml
<CustomField>
    <fullName>Parent_Email__c</fullName>
    <externalId>true</externalId>
    <label>Parent/Guardian Email</label>
    <type>Email</type>
</CustomField>