unpackaged/main/default/objects/Lead/fields/Parent_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_First_Name__c</fullName>
    <label>Parent/Guardian First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>