unpackaged/main/default/objects/Lead/fields/Parent_Guardian_2_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Guardian_2_First_Name__c</fullName>
    <label>Parent/Guardian 2 First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>