unpackaged/main/default/objects/Lead/fields/Parent_Guardian_2_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Parent_Guardian_2_Phone_Number__c</fullName>
    <label>Parent/Guardian 2 Phone Number</label>
    <type>Phone</type>
</CustomField>