unpackaged/main/default/objects/Lead/fields/Parent_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Parent_Phone_Number__c</fullName>
    <label>Parent/Guardian Phone Number</label>
    <type>Phone</type>
</CustomField>