unpackaged/main/default/objects/Lead/fields/Parent_Sourced_Lead__c.field-meta.xml
<CustomField>
    <fullName>Parent_Sourced_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parent Sourced Lead</label>
    <type>Checkbox</type>
</CustomField>