unpackaged/main/default/objects/Lead/fields/Phone_Not_Viable__c.field-meta.xml
<CustomField>
    <fullName>Phone_Not_Viable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field originally created for use within Five9 campaigns. Indicates that the number listed for the student is the wrong number, or the number has been disconnected</description>
    <inlineHelpText>Check this box if the number listed for the student is the wrong number, or the number has been disconnected.</inlineHelpText>
    <label>Phone Not Viable</label>
    <type>Checkbox</type>
</CustomField>