unpackaged/main/default/objects/Lead/fields/Regional_Admissions_Counselor__c.field-meta.xml
<CustomField>
    <fullName>Regional_Admissions_Counselor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regional Admissions Counselor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RoadTeamLeads</relationshipName>
    <type>Lookup</type>
</CustomField>