unpackaged/main/default/objects/Lead/fields/Request_Information_Form__c.field-meta.xml
<CustomField>
    <fullName>Request_Information_Form__c</fullName>
    <inlineHelpText>This is the link auto created when a new lead is added that can be used to email to a student to complete the Request For Information Form (i.e. Page 1 of the Application).</inlineHelpText>
    <label>z_Request Information Form</label>
    <type>Url</type>
</CustomField>