unpackaged/main/default/objects/Lead/fields/Scheduled_Callback_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Callback_Date_Time__c</fullName>
    <description>Field created for Five9 outbound autodial campaigns. Allows the user to set a date and time for a lead to receive a callback via a campaign</description>
    <inlineHelpText>Select the date and time that you would like the student to receive a callback via a Five9 campaign. To cancel a scheduled callback, empty this field.</inlineHelpText>
    <label>Scheduled Callback Date/Time</label>
    <type>DateTime</type>
</CustomField>