unpackaged/main/default/objects/Lead/fields/SF_ID18_Lead__c.field-meta.xml
<CustomField>
    <fullName>SF_ID18_Lead__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SF_ID18_Lead</label>
    <type>Text</type>
</CustomField>