unpackaged/main/default/objects/Lead/fields/SFMC_Sync__c.field-meta.xml
<CustomField>
    <fullName>SFMC_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SFMC Sync</label>
    <type>Checkbox</type>
</CustomField>