unpackaged/main/default/objects/Lead/fields/Source_Score__c.field-meta.xml
<CustomField>
    <fullName>Source_Score__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Source Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>