unpackaged/main/default/objects/Lead/fields/Speed_to_Lead__c.field-meta.xml
<CustomField>
    <fullName>Speed_to_Lead__c</fullName>
    <description>Calculated time in minutes from Created Date to first activity.</description>
    <formula>(FirstResponseDatetime__c  -  CreatedDate)*1440</formula>
    <label>Speed to Lead</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>