unpackaged/main/default/objects/Lead/fields/Standardized_High_School_GPA__c.field-meta.xml
<CustomField>
    <fullName>Standardized_High_School_GPA__c</fullName>
    <description>High School GPA standardized to the 4.0 scale</description>
    <formula>if(
contains(text(GPA_Scale__c),&quot;4&quot;), High_School_GPA__c,

if(
or(
contains(text(GPA_Scale__c),&quot;5&quot;),
contains(text(GPA_Scale__c),&quot;6&quot;)
),

High_School_GPA__c*4/value(text(GPA_Scale__c)),


if(
and(
ispickval(GPA_Scale__c,&quot;100&quot;),
High_School_GPA__c &lt;= 100,
High_School_GPA__c &gt;= 93
),
4.0,

if(
and(
ispickval(GPA_Scale__c,&quot;100&quot;),
High_School_GPA__c &lt;= 92,
High_School_GPA__c &gt;= 90
),
3.7,

if(
and(
ispickval(GPA_Scale__c,&quot;100&quot;),
High_School_GPA__c &lt;= 89,
High_School_GPA__c &gt;= 87
),
3.3,

if(
and(
ispickval(GPA_Scale__c,&quot;100&quot;),
High_School_GPA__c &lt;= 86,
High_School_GPA__c &gt;= 83
),
3.0,

if(
and(
ispickval(GPA_Scale__c,&quot;100&quot;),
High_School_GPA__c &lt;= 82,
High_School_GPA__c &gt;= 80
),
2.7,

if(
and(
ispickval(GPA_Scale__c,&quot;100&quot;),
High_School_GPA__c &lt;= 79,
High_School_GPA__c &gt;= 77
),
2.3,

if(
and(
ispickval(GPA_Scale__c,&quot;100&quot;),
High_School_GPA__c &lt;= 76,
High_School_GPA__c &gt;= 73
),
2.0,

if(
and(
ispickval(GPA_Scale__c,&quot;100&quot;),
High_School_GPA__c &lt;= 72,
High_School_GPA__c &gt;= 70
),
1.7,

if(
and(
ispickval(GPA_Scale__c,&quot;100&quot;),
High_School_GPA__c &lt;= 69,
High_School_GPA__c &gt;= 67
),
1.3,

if(
and(
ispickval(GPA_Scale__c,&quot;100&quot;),
High_School_GPA__c &lt;= 66,
High_School_GPA__c &gt;= 65
),
1.0,

if(
and(
ispickval(GPA_Scale__c,&quot;100&quot;),
High_School_GPA__c &lt;= 64
),
0.0,

null
)
)
)
)
)
)
)
)
)
)
)
)
)</formula>
    <inlineHelpText>High School GPA standardized to the 4.0 scale</inlineHelpText>
    <label>Standardized High School GPA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>