unpackaged/main/default/objects/Lead/fields/SubmitterIP__c.field-meta.xml
<CustomField>
    <fullName>SubmitterIP__c</fullName>
    <description>The IP address of the Unbounce/paid ad form submission that triggered the creation of the lead record. This does not reflect any additional form submissions made after the lead record was already created.</description>
    <label>Submitter IP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>