unpackaged/main/default/objects/Lead/fields/Thoughts_on_Major__c.field-meta.xml
<CustomField>
    <fullName>Thoughts_on_Major__c</fullName>
    <label>Thoughts on Major</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>