unpackaged/main/default/objects/Lead/fields/Total_Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Lead_Score__c</fullName>
    <description>Overall lead scoring field. Utilized for call campaign sorting</description>
    <formula>Demographic_Score__c +  Behavior_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Lead Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>